feat(back): :sparkles: add user management feature

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 REDIS_PASSWORD=redis
+BCRYPT_SALT=10
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
