feat(auth): :sparkles: add login feature*

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 REDIS_PASSWORD=redis
 BCRYPT_SALT=10
+JWT_SECRET=TSY_TOKEN_BABANAO
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
