--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -30,10 +31,11 @@
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^6.4.0",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
-    "ioredis": "^5.4.2",
     "joi": "^17.13.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
