--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@keyv/redis": "^4.2.0",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
@@ -32,11 +33,12 @@
     "@prisma/client": "^6.2.1",
     "bcrypt": "^5.1.1",
     "cache-manager": "^6.4.0",
-    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
     "joi": "^17.13.3",
+    "keyv": "^5.2.3",
+    "keyv-redis": "^1.3.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
