--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "joi": "^17.13.3",
     "keyv": "^5.2.3",
     "nest-winston": "^1.10.2",
