--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,43 @@
+# for development environment only
 services:
+  vault:
+    image: hashicorp/vault:latest
+    restart: always
+    container_name: vault
+    ports:
+      - '8200:8200'
+    command:
+      - server
+    environment:
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
+      VAULT_ADDR: http://127.0.0.1:8200
+      VAULT_LOCAL_CONFIG: |
+        {
+          "ui": true,
+          "storage": {
+            "raft": {
+              "path": "/vault/data",
+              "node_id": "vault"
+            }
+          },
+          "listener": {
+            "tcp": {
+              "address": "0.0.0.0:8200",
+              "tls_disable": true
+            }
+          },
+          "default_lease_ttl": "168h",
+          "max_lease_ttl": "0h",
+          "cluster_addr": "http://127.0.0.1:8201",
+          "api_addr": "http://0.0.0.0:8200"    
+        }
+    cap_add:
+      - IPC_LOCK # Important for production
+    volumes:
+      - ./vault/data:/vault/data # Persist Vault data
   redis_gui:
     image: patrikx3/p3x-redis-ui:latest
+    restart: always
     ports:
       - '7843:7843'
     volumes:
@@ -9,11 +46,11 @@ services:
     image: postgres:16.2-alpine3.19
     restart: always
     environment:
-      POSTGRES_USER: '${POSTGRES_USER}'
-      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
-      POSTGRES_DB: '${POSTGRES_DB}'
+      POSTGRES_USER: 'postgres'
+      POSTGRES_PASSWORD: 'postgres'
+      POSTGRES_DB: 'postgres'
     ports:
-      - '${POSTGRES_PORT}:5432'
+      - '5432:5432'
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -22,7 +59,7 @@ services:
     image: adminer
     restart: always
     ports:
-      - '${ADMINER_PORT}:8080'
+      - '8080:8080'
     environment:
       ADMINER_DEFAULT_SERVER: db
     networks:
@@ -32,7 +69,7 @@ services:
     restart: always
     ports:
       - '6379:6379'
-    command: 'redis-server --save 60 1 --loglevel warning --requirepass ${REDIS_PASSWORD}'
+    command: 'redis-server --save 60 1 --loglevel warning --requirepass redis'
     volumes:
       - redis-data:/data
 networks:
