--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "keyv": "^5.2.3",
     "nest-winston": "^1.10.2",
     "nestjs-cls": "^5.0.1",
+    "node-vault": "^0.10.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
