--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@feature/*": ["src/features/*"],
       "@services/*": ["src/services/*"],
       "@root/*": ["src/*"]
-    }
+    },
+    "jsx": "react"
   }
 }
