--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-email": "^3.0.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.0.5",
@@ -70,8 +72,10 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -86,8 +90,6 @@
     "lint-staged": "^15.3.0",
     "prettier": "^3.0.0",
     "prisma": "^6.2.1",
-    "react-dom": "^19.0.0",
-    "react-email": "^3.0.6",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
